--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div id="root"></div>
     <div id="mobileMenu"></div>
     <div id="confirmDelete"></div>
+    <div id="confirmDeleteAccount"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
