--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sekure Password</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <div id="mobileMenu"></div>
-    <div id="confirmDelete"></div>
-    <div id="confirmDeleteAccount"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Sekure Password</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <div id="mobileMenu"></div>
+  <div id="confirmDelete"></div>
+  <div id="confirmDeleteAccount"></div>
+  <div id="confirmCancelSub"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
