update images + SEO stuff

--- a/index.html
+++ b/index.html
@@ -5,7 +5,18 @@
   <meta charset="UTF-8" />
   <link rel="icon" href="/favicon.ico" type="image/x-icon" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Sekure Password</title>
+  <title>Sekure Password – Secure and Manage Your Passwords</title>
+  <meta name="description"
+    content="Sekure Password helps you securely store, manage, and autofill your passwords across devices. Simple. Secure. Reliable." />
+  <meta name="keywords"
+    content="password manager, secure passwords, autofill, encrypted password vault, Sekure Password, secure, password, passwords, security" />
+  <meta name="author" content="Sekure Team" />
+  <meta name="robots" content="index, follow" />
+  <meta property="og:title" content="Sekure Password" />
+  <meta property="og:description" content="Secure and manage all your passwords with ease." />
+  <meta property="og:image" content="/lock-icon-32px.png" />
+  <meta property="og:url" content="https://sekure-password.vercel.app/" />
+  <meta name="twitter:card" content="summary_large_image" />
 </head>
 
 <body>
