--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <meta property="og:title" content="Sekure Password" />
   <meta property="og:description" content="Secure and manage all your passwords with ease." />
   <meta property="og:image" content="/lock-icon-32px.png" />
-  <meta property="og:url" content="https://sekure-password.vercel.app/" />
+  <meta property="og:url" content="https://www.sekurepassword.com/" />
   <meta name="twitter:card" content="summary_large_image" />
 </head>
 
